--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 cache: packages
 
 r_github_packages:
-  - f0nzie/petro.One
+  - hadley/devtools
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
