--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ import(data.table)
 importFrom(RWeka,NGramTokenizer)
 importFrom(RWeka,Weka_control)
 importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
