make object X1, X2, X3, X4, dc_type_1, dc_type_2 all NULL to pass the check of visible binding. remove parameter "doctype" in read_multipage()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(tm,stopwords)
 importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
 importFrom(utils,data)
+importFrom(utils,head)
 importFrom(utils,unzip)
 importFrom(wordcloud,wordcloud)
 importFrom(xml2,read_html)
