add Remotes: github::f0nzie/rNodal.utils for basic functions. save_to_project()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,3 +31,4 @@ Imports: rvest,
     data.table
 VignetteBuilder: knitr
 URL: https://github.com/f0nzie/petro.One
+Remotes: github::f0nzie/rNodal.utils
