add function and unit test for remove_duplicates_by

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(plot_wordcloud)
 export(read_multidoc)
 export(read_multipage)
 export(read_onepetro)
+export(remove_duplicates_by)
 export(summary_by_dates)
 export(summary_by_doctype)
 export(summary_by_publications)
@@ -27,6 +28,8 @@ export(use_example)
 import(data.table)
 importFrom(RWeka,NGramTokenizer)
 importFrom(RWeka,Weka_control)
+importFrom(dplyr,arrange)
+importFrom(dplyr,distinct)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
