--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ r: bioc-release
 sudo: false
 cache: packages
 
+addons:
+    apt:
+      update: true
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
