change travis a bit

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-r: bioc-release
-sudo: false
 cache: packages
+
+#r: bioc-release
+sudo: false
+
 
 addons:
     apt:
