--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,8 @@ import(data.table)
 importFrom(RWeka,NGramTokenizer)
 importFrom(RWeka,Weka_control)
 importFrom(dplyr,arrange)
-importFrom(dplyr,distinct)
+importFrom(dplyr,desc)
+importFrom(dplyr,distinct_)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
