add function run_papers_search()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(read_multidoc)
 export(read_multipage)
 export(read_onepetro)
 export(remove_duplicates_by)
+export(run_papers_search)
 export(summary_by_dates)
 export(summary_by_doctype)
 export(summary_by_publications)
