--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,10 @@ export(use_example)
 import(data.table)
 importFrom(RWeka,NGramTokenizer)
 importFrom(RWeka,Weka_control)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,distinct_)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -51,6 +53,7 @@ importFrom(rvest,html_text)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,reorder)
+importFrom(stats,setNames)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,VCorpus)
 importFrom(tm,VectorSource)
