add import to stemDocument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(tm,findFreqTerms)
 importFrom(tm,removePunctuation)
 importFrom(tm,removeSparseTerms)
 importFrom(tm,removeWords)
+importFrom(tm,stemDocument)
 importFrom(tm,stopwords)
 importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
