--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -1,11 +1,8 @@
+pandoc: '2.5'
+pkgdown: 1.3.0
+pkgdown_sha: ~
+articles: []
 urls:
   reference: https://github.com/f0nzie/petro.One/reference
   article: https://github.com/f0nzie/petro.One/articles
-articles:
-  document_types_of_papers: document_types_of_papers.html
-  gather_thousand_papers_to_dataframe: gather_thousand_papers_to_dataframe.html
-  joining_keywords: joining_keywords.html
-  make_wordcloud_01: make_wordcloud_01.html
-  make_wordcloud_02: make_wordcloud_02.html
-  permanent_downhole_gauge: permanent_downhole_gauge.html
 
