--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ inst/doc
 # man/
 *.csv
 notebooks/*
+
+tests/testthat/neural_network-s0000r1000\.html
+
+tests/testthat/neural_network-s1000r1000\.html
+
+tests/testthat/neural_network-s3000r1000\.html
+
+tests/testthat/neural_network-s2000r1000\.html
