--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,13 @@ Suggests: testthat,
     covr
 Imports: rvest,
     xml2,
-    magrittr, tibble, tm, wordcloud, urltools, dplyr, graph, 
+    magrittr, 
+    tibble, 
+    tm, 
+    wordcloud, 
+    urltools, 
+    dplyr, 
+    graph, 
     Rgraphviz,
     ggplot2,
     RWeka,
