--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -2,12 +2,9 @@ pandoc: '2.5'
 pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
-  document_types_of_papers: ../../../../../R:/github-oilgains/petro.One/vignettes/document_types_of_papers.html
-  gather_thousand_papers_to_dataframe: ../../../../../R:/github-oilgains/petro.One/vignettes/gather_thousand_papers_to_dataframe.html
-  joining_keywords: ../../../../../R:/github-oilgains/petro.One/vignettes/joining_keywords.html
-  make_wordcloud_01: ../../../../../R:/github-oilgains/petro.One/vignettes/make_wordcloud_01.html
-  make_wordcloud_02: ../../../../../R:/github-oilgains/petro.One/vignettes/make_wordcloud_02.html
-  permanent_downhole_gauge: ../../../../../R:/github-oilgains/petro.One/vignettes/permanent_downhole_gauge.html
+  artificial_intelligence_evolution: ../../../../../R:/github-oilgains/petro.One/vignettes/artificial_intelligence_evolution.html
+  gas_influx_overbalanced: ../../../../../R:/github-oilgains/petro.One/vignettes/gas_influx_overbalanced.html
+  gas_lift_keywords_variation: ../../../../../R:/github-oilgains/petro.One/vignettes/gas_lift_keywords_variation.html
 urls:
   reference: https://github.com/f0nzie/petro.One/reference
   article: https://github.com/f0nzie/petro.One/articles
