--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ tests/testthat/neural_network-s1000r1000\.html
 tests/testthat/neural_network-s3000r1000\.html
 
 tests/testthat/neural_network-s2000r1000\.html
+
+_tests/
+tests/
