--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,46 @@
-language: R
+#----------------------------------------------------------------
+# Travis-CI configuration for Bioconductor packages
+#
+# REFERENCES:
+# * Travis CI: https://travis-ci.org/
+# * tutorial: https://docs.travis-ci.com/user/languages/r
+# * see also: https://blog.rstudio.org/2016/03/09/r-on-travis-ci/
+# * covr: https://github.com/jimhester/covr
+# * Coveralls: https://coveralls.io/
+#
+# Validate your .travis.yml file at http://lint.travis-ci.org/
+#----------------------------------------------------------------
+language: r
+cache: packages
+
+# R versions to be tested on
+r:
+  - bioc-release
+  - bioc-devel
+
+## Turn this to true before submission to CRAN/Bioconductor
+warnings_are_errors: false
+
+r_build_args: "--no-build-vignettes"
+r_check_args: "--no-vignettes"
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
 
 ## Use patched devtools
 r_github_packages:
-  - hadley/devtools@efa894ffa
+  - hadley/devtools
 
-install:
-- R -e 'devtools::install_deps(dep = T)'
+## Code coverage
+r_packages:
+  - covr
 
-script:
-- R CMD build .
-- R CMD check *tar.gz
+## BiocCheck
+bioc_packages:
+  - BiocCheck
+
+after_success:
+  - Rscript -e 'covr::coveralls()'
+  - R CMD BiocCheck .
