--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # https://github.com/travis-ci/travis-ci/issues/5650
+# this travis.yml is passing in Travis
 language: r
 r:
- - 3.5.1
+ - 3.5.2
  - devel
 cache: packages
 sudo: false
